Fixed issue with overlapping text and timestamp.

--- a/src/styles/components/_chat.scss
+++ b/src/styles/components/_chat.scss
@@ -297,6 +297,11 @@
     text-align: right;
     top: 8px;
   }
+  .timestamp-space {
+    width:40px;
+    height:10px;
+    float:right;
+  }
   strong {
     display: block;
     padding-bottom: 2px;
